Update Inference Notebook and README

--- a/notebook/inference_gh.ipynb
+++ b/notebook/inference_gh.ipynb
@@ -46,10 +46,10 @@
     "# params\n",
     "\n",
     "# We will need Stable-Foley, CAVP cand CLAP checkpoints to generate audio.\n",
-    "# CAVP and CLAP checkpoints are available in the repository.\n",
+    "# You can place downloaded checkpoints in the following paths:\n",
     "# CAVP ckpt: 'Stable-Video2Audio/logs/cavp_ckpt/cavp_epoch66.ckpt'\n",
     "# CLAP ckpt: '/homes/rfg543/Documents/Stable-Video2Audio/logs/clap_ckpt/630k-audioset-best.pt'\n",
-    "# Stable-Foley ckpt: 'Stable-Video2Audio/logs/ckpts/gh-controlnet_2024-08-22-11-43-14/epoch=213-valid_loss=0.493.ckpt' (there are other checkpoints available in the repository in the same folder)\n",
+    "# Stable-Foley ckpt: 'Stable-Video2Audio/logs/ckpts/gh-controlnet_2024-08-22-11-43-14/epoch=213-valid_loss=0.493.ckpt' \n",
     "\n",
     "\n",
     "seed = 42\n",
